--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,18 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 1.2em;
 }
 
 main {
   flex: 1 0 auto;
 }
-    
+
 .icon-block {
   padding: 0 15px;
 }
 .icon-block .material-icons {
-	font-size: inherit;
+  font-size: inherit;
 }
 
 .yhteystiedot > li {
