--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,12 @@ main {
 
 img {
   height: 64px;
+  margin-left: -2rem;
 }
 
 @media screen and (max-width: 600px) {
   img {
     height: 56px;
+    margin-left: 0rem;
   }
 }
